# VSD_Encoder_01

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/grid_search/: gwp.yaml
configs/models/: gabor_kay2008.yaml  gabor_serre.yaml  resnet18.yaml  resnet50.yaml
configs/ridge/: default.yaml
configs/stimuli/: default.yaml
configs/windows/: baseline_05_25.yaml  evoked_30_50.yaml  evoked_32_37.yaml  evoked_32_42.yaml
docs/: DATA_LAYOUT.md  DL_feature_extraction.md  backbone_comparison.md  cluster_pipeline.md  encoding_pairs.md  encoding_pipeline.md  gabor_gwp.md  preprocessing.md  ridge_encoding.md  stimulus_rendering.md
scripts/: 01_build_averaged_trials.py  01b_build_stimulus_images.py  01c_build_encoding_pairs.py  02_extract_features.py  02b_extract_stimulus_features.py  03_train_ridge_encoder.py  04_evaluate_pixel_correlation.py  05_compare_backbones.py  06_grid_search_gwp.py  cluster_setup.sh  common_env.sh  plot_vsd_vs_stimulus.py  py  run_prepare_encoding.sh  run_ridge_evaluation.sh  submit_encoding_jobs.sh  verify_workspace.sh
slurm/: build_averaged_trials.slurm  build_encoding_pairs.slurm  build_stimulus_images.slurm  extract_features.slurm  extract_stimulus_features.slurm  run_encoding_heavy.slurm  run_ridge_evaluation.slurm  train_ridge_encoder.slurm
src/: paths.py
src/encoding/: pairs.py  (+5 more)
tests/: test_averaging.py  test_backbone.py  test_encoding_pairs.py  test_extract_stimulus.py  test_gabor_gwp.py  test_h5_io.py  test_mask.py  test_pixel_correlation.py  test_preprocess.py  test_ridge.py  test_stimuli.py
(+23 files in other folders)
