[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vsd-encoder"
version = "0.1.0"
description = "VSD encoder: frame-averaged trials, DNN features, linear downstream models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.8",
    "matplotlib>=3.7",
    "netCDF4>=1.6",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "xarray>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
